16jun17 svn   trx2txt.sh             if TRX_IN sig script len=0, don't call trx_in_sig_script.sh
16jun17 svn   trx_in_sig_state_machine.graphml - added S24 beginning with "OP_Data_0x3C"
16jun18 svn   trx_out_pk_script.sh   fix state machine for OP_DATA33 and OP_DATA65 (P2PK)
16jun18 svn   trx_out_pk_state_machine.graphml - updated S&_OP_Data65 and S11_OP_Data33 
16jun18 svn   base58check_enc.sh     rework parameter handling 
16jun18 svn   trx2txt.sh             adopted to fit parameter handling for base58check_enc.sh
16jun18 svn   trx_in_sig_script.sh   adopted to fit parameter handling for base58check_enc.sh
16jun19 svn   trx2txt.sh             fixing "var_int" or "compact size integers

16jun20 svn   trx2txt.sh             work on integrating unsigned raw transactions 
16jun21 svn   trx2txt.sh             included an awk call (reverse_hex), to reverse hex data 
16jun21 svn   trx_in_sig_state_machine.graphml - added S30-S34 for unsigned raw trx data   
16jun25 svn   trx_in_sig_script.sh   added proper anming to Sig and pubkey (ECDSA, ASN1-DER and X9.63)
16jun27 svn   trx2txt.sh             work on integrating signing a raw transaction 
16jul02 svn   trx2txt.sh             display properly unsigned raw trx
16jul07 svn   trx2txt.sh             extended parameter handling
16jul08 svn   trx_create_sign.sh     created new file to properly manage creating/signing trx
16jul09 svn   trx_key2pem.sh         created file to manage key handling (hex to PEM) for signing
16jul09 svn   trx-suite	             ### released version to GITHUB ###
16jul17 svn   trx2txt.sh             fixed var_int (V_INT) handling
16jul17 svn   trx_create_sign.sh     fixed parameter handling for '-u'
16jul27 svn   trx_in_sig_state_machine.graphml - added S35-S37 for MULTISIG
16jul27 svn   trx_in_sig_script.sh   added multisig handling 
16jul27 svn   trx2txt.sh             corrected code for unsigned raw trx
16jul28 svn   trx_create_sign.sh     included strict DER-encoded signature checks 

